--- a/getting-started/prerequisites-installation/installation-platforms.mdx
+++ b/getting-started/prerequisites-installation/installation-platforms.mdx
@@ -1,209 +1,232 @@
 ---
-title: "Installation on Linux, macOS, and Windows"
-description: "Follow platform-specific installation steps using CMake, Bazel, or manual builds to integrate GoogleTest and GoogleMock into your C++ projects. Detailed guides for major operating systems ensure you get up and running smoothly."
+title: "Installation (All Platforms)"
+description: "Follow clear, platform-specific instructions to install GoogleTest on Linux, macOS, and Windows. This page covers CMake, Bazel, and basic source builds, guiding you through the most common paths for integration into your workflow."
 ---
 
-# Installation on Linux, macOS, and Windows
+# Installation (All Platforms)
 
-This guide walks you through the platform-specific steps to install and build GoogleTest and GoogleMock, the robust open-source C++ testing and mocking frameworks by Google. Whether you're using CMake, Bazel, or prefer manual builds, these instructions will ensure GoogleTest and GoogleMock are properly integrated into your C++ projects across Linux, macOS, and Windows.
+Follow these clear and detailed instructions to install GoogleTest on your development platform. Whether you are using Linux, macOS, or Windows, this guide walks you through the most common installation paths including CMake-based builds, Bazel integration, and manual source compilation. By the end, you will have GoogleTest ready to integrate into your C++ testing workflows.
 
 ---
 
-## 1. Prerequisites & System Requirements
+## 1. Prerequisites & Environment Preparation
 
-Before you begin, ensure your development environment meets the following:
+Before starting the installation, ensure your system meets the following:
 
-- **C++17 Support**: Your compiler must support at least the C++17 standard.
-- **Supported Platforms**: Linux, macOS, and Windows are all supported platforms.
-- **Build Tools**:
-  - CMake (3.14 or higher recommended)
-  - Bazel (if using Bazel builds)
-  - Native build tools like Make, Visual Studio, or Xcode
-- **Dependencies**:
-  - Threading libraries: GoogleTest uses pthread on Unix-like platforms.
-  - Internet access (if downloading dependencies or cloning repositories)
+- **Supported Operating Systems:** Linux, macOS, Windows (desktop editions including Visual Studio environments).
+- **Compiler:** A C++ compiler compatible with C++17 standard (gcc 7+, clang 5+, MSVC 2017 Update 3+).
+- **CMake:** Version 3.14 or later is required for the standard build process.
+- **Bazel:** Optional, if you prefer using Bazel as your build system.
+- **Network Connection:** For cloning from GitHub or downloading source archives.
 
-> See the [System Requirements](../prerequisites-installation/system-requirements) page for detailed platform compatibility.
+<Tip>
+Ensure your development environment supports C++17 as GoogleTest requires it to build correctly.
+</Tip>
 
 ---
 
 ## 2. Installation Methods
 
-GoogleTest and GoogleMock support multiple build and installation methods tailored for different workflows.
+### A. Building with CMake (Recommended)
 
-### 2.1 Build Using CMake (Recommended)
+GoogleTest provides a robust CMake build script supporting multiple platforms and configurations.
 
-#### Standalone Build
+#### Step-by-Step Installation via CMake
 
-Follow these steps to build GoogleTest and GoogleMock as standalone projects.
-
-1. Clone the repository, specifying the version or branch you want:
+1. **Clone GoogleTest Repository**
 
 ```bash
-# Clone GoogleTest repo
-$ git clone https://github.com/google/googletest.git -b main
-d$ cd googletest
+  git clone https://github.com/google/googletest.git -b main
+  cd googletest
 ```
 
-2. Create a build directory and invoke CMake:
+2. **Create a Build Directory**
 
 ```bash
-# Create and enter build dir
-d$ mkdir build && cd build
-
-# Generate build files with GoogleMock included (default)
-$ cmake ..
-
-# OR generate build files with only GoogleTest
-$ cmake .. -DBUILD_GMOCK=OFF
+  mkdir build
+  cd build
 ```
 
-3. Build the libraries and optionally install:
+3. **Generate Build Files**
+
+- To build GoogleTest and GoogleMock (default):
 
 ```bash
-$ make
-
-# (Optional) Use sudo for system-wide install
-$ sudo make install
+  cmake ..
 ```
 
-> On Windows, CMake generates Visual Studio solution files which you can open and build within Visual Studio.
-> On macOS, Xcode project files may be generated.
+- To build only GoogleTest (skip Mock):
 
-#### Incorporate into Your Existing CMake Project
-
-- Use `find_package(GTest CONFIG REQUIRED)` if GoogleTest is installed.
-- Link your tests to `GTest::gtest` or `GTest::gmock` for GoogleMock support.
-
-Alternatively, add GoogleTest as a subdirectory in your project:
-
-```cmake
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/v1.17.0.zip
-)
-FetchContent_MakeAvailable(googletest)
-
-add_executable(my_tests my_tests.cpp)
-target_link_libraries(my_tests gtest_main)
-add_test(NAME my_tests COMMAND my_tests)
+```bash
+  cmake .. -DBUILD_GMOCK=OFF
 ```
 
-> This ensures all compiler flags and settings are consistent across your project.
+4. **Build the Libraries**
 
----
+- On Linux/macOS:
 
-### 2.2 Build with Bazel
+```bash
+  make
+```
 
-GoogleTest ships with Bazel build definitions for those using Bazel in their projects.
+- On Windows (Visual Studio):
 
-- The core Bazel targets include `//:gtest`, `//:gtest_main`, and `//:gtest_for_library`.
-- Bazel automatically handles dependencies like pthread where applicable.
-- To run tests, define Bazel test targets depending on these libraries.
+Open the generated solution file (e.g., `gtest.sln`) in Visual Studio and build.
 
-Steps:
+5. **(Optional) Install System-Wide**
 
-1. Add GoogleTest to your Bazel workspace.
-2. Depend on Bazel targets such as `@com_google_googletest//:gtest_main` in your `BUILD` files.
-3. Build and run tests using Bazel commands.
+This requires administrative privileges:
 
-> Refer to the BUILD.bazel file for examples and to your Bazel build system’s documentation for configuration details.
+```bash
+  sudo make install
+```
 
----
+or use the equivalent install commands in your environment.
 
-### 2.3 Manual Builds (Without CMake or Bazel)
-
-If you prefer manual builds or have custom build scripts:
-
-1. Include the GoogleTest headers from `googletest/include/gtest/` and GoogleMock headers from `googlemock/include/gmock/`.
-2. Compile the source files from:
-   - `googletest/src/*.cc`
-   - `googlemock/src/*.cc`
-3. Ensure you compile your tests with the `-std=c++17` flag.
-4. Link your tests against the compiled GoogleTest/GoogleMock object files or static libraries.
-
-> You must add pthread linking on Unix-like systems: e.g., `-pthread` compiler and linker flag.
-
----
-
-## 3. Platform-Specific Notes
-
-### Linux/macOS
-
-- Standard `make` or Ninja can be used post-CMake generation.
-- Pthread is automatically detected and linked.
-- For default installs, GoogleTest and GoogleMock are installed in `/usr/local/`.
-
-### Windows
-
-- Visual Studio solutions are generated by CMake.
-- By default, CMake configures static runtime linkage. Use `-Dgtest_force_shared_crt=ON` if you want dynamic runtimes.
-- You can build with MSVC Command Prompt using generated `.sln` files.
+<Check>
+After build, verify the presence of `libgtest.a`, `libgmock.a` or their `.lib` equivalents under build directories.
+</Check>
 
 <Tip>
-On Windows, ensure Visual Studio’s C++ workload is installed before building.
+Enabling `gtest_force_shared_crt` option in CMake is essential when integrating with Visual Studio projects that use dynamic CRT to avoid runtime library mismatches.
 </Tip>
 
 ---
 
-## 4. Verification
+### B. Using Bazel Build System
 
-After building and installing GoogleTest and GoogleMock, verify your setup:
+GoogleTest supports Bazel, Google's fast build system, for users who prefer this workflow.
 
-1. Create a simple test file, e.g., `sample_test.cpp`:
+#### Installation Steps:
 
-```cpp
-#include <gtest/gtest.h>
+1. **Clone repository** (same as previous CMake steps).
 
-TEST(SampleTest, Passes) {
-    EXPECT_EQ(1, 1);
-}
-
-int main(int argc, char **argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-2. Compile it linking against GoogleTest libraries.
-3. Run the executable; you should see output indicating tests passed.
+2. **Build tests with Bazel**:
 
 ```bash
-$ ./sample_test
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from SampleTest
-[ RUN      ] SampleTest.Passes
-[       OK ] SampleTest.Passes (0 ms)
-[----------] 1 test from SampleTest (0 ms total)
+  bazel build //...
+```
 
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
+3. **Run tests**:
+
+```bash
+  bazel test //...
 ```
 
 ---
 
-## 5. Troubleshooting Common Installation Issues
+### C. Manual Source Compilation
 
-<AccordionGroup title="Common Installation Problems and Solutions">
-<Accordion title="CMake cannot find pthread library on Linux">
-Ensure pthread development headers and libraries are installed.
-On Debian/Ubuntu, run:
+For environments without CMake or Bazel, or for quick tests, you can manually compile GoogleTest source files.
+
+#### Steps:
+
+1. **Download source code** and place it along with your test files.
+
+2. **Compile GoogleTest sources:**
+
+Include `gtest/gtest-all.cc` and optionally `gmock/gmock-all.cc` in your build commands.
+
+Example with `g++`:
 
 ```bash
-sudo apt-get install libpthread-stubs0-dev
+  g++ -std=c++17 -isystem googletest/include -pthread your_test.cc \
+  googletest/src/gtest-all.cc -o your_test
 ```
 
-Also confirm CMake output detects pthread in your configuration.
+3. **Run your test executable:**
+
+```bash
+  ./your_test
+```
+
+<Warning>
+Manual compilation requires explicit linking of pthread on Unix-like platforms (use `-pthread`). On Windows, ensure you link against appropriate runtime libraries.
+</Warning>
+
+---
+
+## 3. Verifying Installation
+
+After installation, validating GoogleTest is crucial.
+
+- Run sample or existing tests that use GoogleTest libraries.
+- Successful execution typically shows output like:
+
+```
+[==========] Running 1 test from 1 test case.
+[----------] Global test environment set-up.
+[ RUN      ] ExampleTest.DoesSomething
+[       OK ] ExampleTest.DoesSomething (0 ms)
+[----------] Global test environment tear-down
+[==========] 1 test from 1 test case ran. (0 ms total)
+[  PASSED  ] 1 test.
+```
+
+- If tests fail to run or link, re-check dependencies, compiler settings, and library paths.
+
+---
+
+## 4. Platform-Specific Notes
+
+### Linux/macOS
+
+- Use `make` or supported build systems.
+- Ensure `pthread` is linked.
+- Use the command-line tools `cmake` or `bazel` for easier builds.
+
+### Windows
+
+- Visual Studio users can load the generated solution from CMake.
+- Pay attention to dynamic vs static runtime linking. Set option `gtest_force_shared_crt` when needed.
+- Use native Windows threading and synchronization (handled automatically by GoogleTest).
+
+<Tip>
+If using MinGW or Cygwin, verify that threading libraries and POSIX compatibility are functioning.
+</Tip>
+
+---
+
+## 5. Troubleshooting Common Issues
+
+<AccordionGroup title="Common Installation Issues and Solutions">
+<Accordion title="Build Fails Due to Missing pthread">
+If your build fails referencing pthread functions:
+
+- Make sure you pass `-pthread` flag during compilation and linking.
+- On CMake, this is usually handled automatically if threads package is found.
+- Example fix:
+
+```bash
+  g++ -pthread ...
+```
+
 </Accordion>
-<Accordion title="Windows build fails due to runtime mismatch">
-Use the CMake option `-Dgtest_force_shared_crt=ON` to align runtime linkage with your project.
-Also, ensure Visual Studio version supports C++17.
+<Accordion title="Runtime Errors Related to CRT Mismatch on Windows">
+- Enable `gtest_force_shared_crt` CMake option to match runtime libraries.
+- Ensure all projects link with the same CRT type (static or dynamic).
+
+Example:
+
+```bash
+  cmake .. -Dgtest_force_shared_crt=ON
+```
+
 </Accordion>
-<Accordion title="Link errors when building manually">
-Add the `-pthread` flag to both compilation and linking commands on Linux/macOS.
-Ensure all GoogleTest source files are compiled and linked.
+<Accordion title="Tests Do Not Run, No Output">
+- Check that the main() function is correctly linked. Use `gtest_main` or `gmock_main` if you prefer an automatic main().
+- If you write your own main(), ensure `testing::InitGoogleTest(&argc, argv);` or `testing::InitGoogleMock(&argc, argv);` is called.
+
+</Accordion>
+<Accordion title="Build Uses Older C++ Standard">
+- Verify CMake or build system uses at least C++17.
+- Set CMake variables:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
 </Accordion>
 </AccordionGroup>
 
@@ -211,17 +234,17 @@ Ensure all GoogleTest source files are compiled and linked.
 
 ## 6. Next Steps
 
-- Once installed, learn how to start writing your first tests by visiting the [Writing Your First Test](../first-steps-with-tests/writing-first-test) guide.
-- Explore [Building and Configuring Your Project](../prerequisites-installation/building-configuring-project) for more advanced setup options.
-- For deeper integration, check out the [Integration and Dependencies](../../overview/architecture-integration-usecases/integration-and-dependencies) guide.
+- After successful installation, proceed to the [Configuring GoogleTest in Your Project](https://your-docs-domain/getting-started/prerequisites-installation/configuration-setup) guide for integration guidance.
+- Visit the [Writing & Running Your First Test](https://your-docs-domain/getting-started/first-steps-usage/writing-running-first-test) to create your initial test cases.
 
 ---
 
-## References
+## Additional Resources
 
 - [GoogleTest GitHub Repository](https://github.com/google/googletest)
-- [CMake Official Website](https://cmake.org/)
-- [System Requirements](../prerequisites-installation/system-requirements)
-- [Bazel Build Documentation](https://docs.bazel.build/)
+- [GoogleTest CMake Installation Instructions](https://github.com/google/googletest/blob/main/README.md)
+- [GoogleTest Platforms Support](https://github.com/google/googletest/blob/main/docs/platforms.md)
 
 ---
+
+This page is part of the Getting Started documentation focused on installation and setup for all supported platforms. Check the navigation sidebar for related pages covering system requirements, configuration details, and first tests.
