--- a/getting-started/first-steps-usage/troubleshooting-setup.mdx
+++ b/getting-started/first-steps-usage/troubleshooting-setup.mdx
@@ -1,249 +1,172 @@
 ---
-title: "Troubleshooting & Common Setup Issues"
-description: "Lists the most frequent errors users encounter during setup—such as missing headers, linker errors, compiler issues—and delivers targeted solutions. Points users to additional resources, community docs, and official FAQ for unresolved issues."
+title: "Troubleshooting Setup Issues"
+description: "Resolve common installation and configuration problems fast. This resource lists frequent pitfalls, error messages, and actionable debugging tips, helping you avoid frustration and maintain progress."
 ---
 
-# Troubleshooting & Common Setup Issues
+# Troubleshooting Setup Issues
 
-This page identifies frequent setup errors encountered when integrating and configuring GoogleTest and GoogleMock, including missing headers, linker errors, and compiler issues. Each error is described with clear diagnoses and targeted solutions, enabling you to resolve problems quickly and get your tests running. When an issue falls outside this scope, you’ll find pointers to deeper resources and community documentation.
-
----
-
-## 1. Missing Header Files
-
-### Problem
-Your compiler reports errors like:
-
-```
-could not find or open the following file: gmock/gmock.h
-```
-
-### Cause
-This means your project's include paths do not point to the GoogleMock/GoogleTest headers correctly.
-
-### Solution
-- Ensure the GoogleTest source and GoogleMock source directories are included in your compiler's include path, typically using `-I/path/to/googletest/include`.
-- If you installed GoogleTest manually, verify that the headers exist in the expected location.
-- If you are using CMake, confirm the include directories are correctly specified with `target_include_directories()` or via `find_package(GTest)` and linked properly.
-
-### Tips
-- Avoid mixing versions or partial installs that might shadow or omit header files.
-- Confirm your build tool recognizes the include paths by examining verbose compile output.
+Resolve common installation and configuration problems fast. This resource lists frequent pitfalls, error messages, and actionable debugging tips, helping you avoid frustration and maintain progress.
 
 ---
 
-## 2. Linker Errors During Build
+## Common Setup Problems & How to Fix Them
 
-### Problem
-Linker messages such as:
+When integrating and using GoogleMock (gMock) and GoogleTest, users may encounter several typical issues during installation, compilation, or runtime. This guide focuses solely on setup-related problems to get you back on track quickly.
 
-```
-undefined reference to `testing::InitGoogleMock(int*, char**)`
-undefined reference to symbols from gmock or gtest libraries
-```
+### 1. Installation and Build Failures
 
-### Cause
-These indicate your build is not linking against the correct GoogleTest or GoogleMock libraries.
-
-### Solution
-- Link your test executable against the compiled GoogleTest and GoogleMock static or shared libraries.
-- Use `-lgmock_main` if you want to use the built-in `main()` provided by GoogleMock.
-- In CMake, link with `GTest::gmock_main` or `GTest::gmock` targets depending on your setup.
-
-### Best Practice
-- Prefer linking with `gmock_main` for quick setup as it provides the main entry point.
-- If you provide your own `main()`, link with `gmock` and `gtest` separately.
-
----
-
-## 3. Compiler Complaints on MOCK_METHOD Usage
-
-### Problem
-Errors related to `MOCK_METHOD` macro, such as:
-
-```
-error: macro "MOCK_METHOD" passed 2 arguments, but takes just 1
-warning: overriding virtual function only differs by const/volatile qualifier
-```
-
-### Cause
-These often stem from improper macro usage or compiler quirks.
-
-### Solution
-- When mocking methods, always follow the syntax:
-
-  ```cpp
-  MOCK_METHOD(return_type, MethodName, (args...), (optional qualifiers));
-  ```
-
-- For methods with commas in return type or arguments, wrap the entire type or argument list in parentheses:
-
-  ```cpp
-  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-  ```
-
-- On MSVC, remove `const` from parameter declarations because the compiler ignores top-level const on parameters and warns about overriding mismatches.
-
-- When mocking const methods, add `(const)` as qualifier:
-
-  ```cpp
-  MOCK_METHOD(int, GetValue, (), (const, override));
-  ```
-
----
-
-## 4. Runtime Warnings About "Uninteresting Callable Calls"
-
-### Behavior
-When a mock method is called without an explicit `EXPECT_CALL`, or called with unexpected arguments, you may see warnings like:
-
-```
-GMOCK WARNING: Uninteresting mock function call - returning default value.
-```
-
-### Explanation
-In GoogleMock, if you call a mock method that has no expectations set, it performs a default action (e.g., returning zero or default constructed value). This is by design to allow partial mocking.
-
-### Recommendations
-- Use `ON_CALL` to define default behavior for your mock methods.
-- To suppress warnings for calls you do not care about, use `NiceMock`:
-
-  ```cpp
-  NiceMock<MockClass> mock_obj;
-  ```
-
-- Alternatively, add a catch-all `EXPECT_CALL` with `Times(AnyNumber())` to explicitly allow the calls.
-
-- If you want to treat unexpected calls as errors, use `StrictMock` instead.
-
----
-
-## 5. Header Inclusion Order Conflicts
-
-### Problem
-Conflicts or macro redefinitions, particularly on Windows platforms:
-
-```
-#define Method MethodW
-error: macro redefinition conflicts
-```
-
-### Cause
-Including platform-specific headers (e.g., Windows API) before GoogleMock may define macros that interfere with mock method names.
-
-### Solution
-- Always include `gmock/gmock.h` before system headers that may define such macros.
-- If you must include them first, undefine problematic macros before including GoogleMock:
-
-  ```cpp
-  #undef Method
-  #include <gmock/gmock.h>
-  ```
-
-- Use unique method names in mocks if possible.
-
----
-
-## 6. Tests Fail Because of Missing Thread Support or Incorrect Compiler Flags
-
-### Issue
-GoogleMock requires thread support and C++17 or later. Missing support results in build or runtime failures.
-
-### Action
-- Ensure your compiler supports C++17 or newer.
-- Pass the correct compile flags (`-std=c++17` or equivalent).
-- Enable thread support if required by your build system.
-
-### Troubleshooting
-- Check your compiler documentation.
-- Use [Prerequisites & System Requirements](../setup-installation/prerequisites-requirements) page for detailed environment specifications.
-
----
-
-## 7. How to Verify Setup Was Successfully Fixed
-
-After resolving the above issues:
-
-1. Build your test executable without errors.
-2. Run your tests; the GoogleTest runner should execute and report results.
-3. No warnings about uninteresting calls should appear unless legitimately triggered.
-
-If problems persist, consult the [Quick Validation Checklist](../first-steps-usage/validate-installation) and the [Installation Modes](../setup-installation/installation-modes) guide.
-
----
-
-## 8. Additional Resources
-
-- **GoogleTest Installation and Setup**: Comprehensive instructions on configuring GoogleTest/GMock.
-- **Mocking Reference**: Detailed explanation and examples of mocking API.
-- **Getting Started Issues [FAQ]**: Common problems encountered during initial integration.
-- **Official GoogleTest GitHub repository**: https://github.com/google/googletest
-
----
-
-## 9. When to Ask the Community
-
-If you have tried the steps above and still face issues:
-
-- Check for existing issues on GitHub.
-- Consult the [FAQ and Troubleshooting](../../faq/common-issues-solutions) pages.
-- Ask for help on community forums or GoogleTest mailing lists.
-
----
-
-## Summary
-This troubleshooting guide is designed to empower you to quickly identify and fix frequent GoogleTest and GoogleMock setup issues, focusing on missing headers, linker failures, compiler errors with mock macros, runtime warnings, platform-specific conflicts, and threading or compiler flag problems. Following the clear step-by-step solutions and tips here will ensure faster onboarding and stable test environments.
+- **Symptom:** Build errors related to missing headers, libraries, or compiler incompatibilities.
+- **Cause:** Missing dependencies or unsupported environment.
+- **Resolution:**
+  - Confirm your environment meets GoogleTest's system requirements ([System Requirements](/getting-started/prerequisites-installation/system-requirements)).
+  - Ensure you have installed required tools like CMake and a supported compiler.
+  - Follow platform-specific installation instructions exactly ([Installation (All Platforms)](/getting-started/prerequisites-installation/installation-platforms)).
+  - Verify that your build system (CMake, Bazel, manual) is configured properly.
 
 <Check>
-✔ Ensure include paths are correctly set for GoogleTest and GoogleMock headers.
-✔ Link against appropriate GoogleMock and GoogleTest libraries.
-✔ Use `MOCK_METHOD` macros with correct syntax, especially when dealing with commas and const.
-✔ Employ `ON_CALL` and `EXPECT_CALL` judiciously to control warnings and enable realistic mock behaviors.
-✔ Be aware of platform-specific macro conflicts and resolve header ordering accordingly.
-✔ Confirm your build environment uses C++17 and threading support.
+Verify successful installation by running your build system and ensuring no errors related to test framework headers or symbols.
 </Check>
 
+### 2. Linking Errors
+
+- **Symptom:** Linker errors about missing symbols or unresolved references to GoogleMock or GoogleTest functions.
+- **Cause:** GoogleTest/GoogleMock libraries are not linked or linked incorrectly.
+- **Resolution:**
+  - Confirm linking against the correct GoogleTest and GoogleMock static or shared libraries.
+  - Follow guidance on build integration and linking in [Configuring GoogleTest in Your Project](/getting-started/prerequisites-installation/configuration-setup).
+  - For CMake, ensure `target_link_libraries` includes `gtest`, `gmock`, and `pthread` if on Linux.
+
+### 3. Unexpected or Missing Test Results
+
+- **Symptom:** Tests compile but do not run or no tests are discovered.
+- **Cause:** Incorrect test definition, missing test registration, or initialization errors.
+- **Resolution:**
+  - Make sure you have the `TEST()` or `TEST_F()` macros correctly defined.
+  - Call `testing::InitGoogleMock(&argc, argv)` before running tests.
+  - Verify that your test executable runs and GoogleTest framework initializes.
+  - Refer to [Writing & Running Your First Test](/getting-started/first-steps-usage/writing-running-first-test) for correct usage.
+
+### 4. Warnings About Uninteresting Calls
+
+- **Symptom:** "Uninteresting mock function call" warnings appear in output.
+- **Cause:** Mock methods are called without corresponding `EXPECT_CALL` setups.
+- **Resolution:**
+  - Use `ON_CALL` to specify default actions without expecting calls.
+  - Use `EXPECT_CALL(...).Times(AnyNumber())` for methods called without verification.
+  - Alternatively, wrap your mock object with `NiceMock<T>` to suppress these warnings.
+  - See [Mocking Reference - The Nice, the Strict, and the Naggy](../reference/mocking.md#NiceStrictNaggy) for strategies.
+
+### 5. Failed Expectation Messages Pointing to Unexpected Calls or Argument Mismatches
+
+- **Symptom:** Tests fail with detailed messages showing mismatched arguments or calls to unexpected methods.
+- **Cause:** `EXPECT_CALL` definitions do not match calls made during tests.
+- **Resolution:**
+  - Run tests with increased verbosity to understand expectations (`--gmock_verbose=info`).
+  - Examine stack traces and argument diagnostics in failure output.
+  - Confirm argument matchers used in `EXPECT_CALL` correspond to actual calls.
+  - Use GoogleMock's rich matcher facilities (e.g., `_`, `Gt()`, `Eq()`) to flexibly match arguments.
+  - Review [gMock Cookbook](../gmock_cook_book.md) sections on matchers and expectations.
+
+### 6. Leaked Mock Objects at Program Exit
+
+- **Symptom:** Errors about leaked mocks on test completion.
+- **Cause:** Mock objects not destroyed properly, leading to expectation verifications being skipped.
+- **Resolution:**
+  - Ensure mock objects have virtual destructors if mocking interfaces.
+  - Delete mock objects properly if allocated dynamically.
+  - Suppress leak errors intentionally using `Mock::AllowLeak(mock_object)` if leaks are acceptable.
+
 ---
 
-# Appendix: Quick Fix Examples
+## Diagnosing With Verbosity Flags
 
-### Adding Include Paths in CMake
+GoogleMock includes a verbosity setting that controls the amount of diagnostic output.
 
-```cmake
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS})
-add_executable(my_test my_test.cc)
-target_link_libraries(my_test ${GTEST_BOTH_LIBRARIES} pthread)
+- Set `--gmock_verbose=info` to print detailed traces of mock calls, expectations matched, actions taken, and stack traces.
+- Use `--gmock_verbose=warning` to see warnings only.
+- `--gmock_verbose=error` reduces output to only errors.
+
+### Example: Run your test with info verbosity
+
+```bash
+./your_test_executable --gmock_verbose=info
 ```
 
-### Correct MOCK_METHOD Syntax Example
-
-```cpp
-class MockExample {
- public:
-  MOCK_METHOD(void, Foo, (int x, const std::string& s), (override));
-  MOCK_METHOD(int, Bar, (), (const, override));
-  // For problematic types:
-  MOCK_METHOD((std::pair<int, int>), Baz, (), (override));
-};
-```
-
-### Suppressing Uninteresting Call Warnings
-
-```cpp
-using ::testing::NiceMock;
-NiceMock<MockExample> mock_obj;
-EXPECT_CALL(mock_obj, Foo).Times(testing::AnyNumber());
-```
-
-### Untangling Windows Macro Conflicts
-
-```cpp
-#undef Method
-#include <gmock/gmock.h>
-```
+This will help you follow what GoogleMock is matching at runtime and diagnose mismatches or unexpected calls.
 
 ---
 
-For deeper issues, please refer to the [Mocking Reference](../../docs/reference/mocking.md) and the [gMock for Dummies](../../docs/gmock_for_dummies.md) guides for practical examples and advanced usage.
+## Tips and Best Practices
+
+- Use `ON_CALL` to declare default behaviors for mocks where calls are expected but not under test verification.
+- Use `EXPECT_CALL` only for calls whose presence, arguments, count, or order you want to verify.
+- Wrap mock objects in `NiceMock` or `StrictMock` templates to control how uninteresting calls are handled.
+- Use sequences and `.InSequence()` to enforce call order and runtime behavior dependencies.
+- Verify and clear expectations manually using `Mock::VerifyAndClearExpectations(mock_ptr)` if mock lifetime is complex.
+
+---
+
+## Troubleshooting: Step-by-Step
+
+<Steps>
+<Step title="Confirm Environment and Dependencies">
+Make sure your development environment matches the supported platforms and has required tools installed. Check compiler versions, CMake installation, and threading libraries.
+</Step>
+<Step title="Build GoogleTest and GoogleMock">
+Follow the official instructions precisely for your platform, whether using CMake, Bazel, or manual build. Confirm no build errors and presence of compiled library files.
+</Step>
+<Step title="Link Correctly in Your Project">
+Add proper linking flags/libraries such as `gtest`, `gmock`, and threading libraries. Verify the project builds without unresolved symbols.
+</Step>
+<Step title="Initialize GoogleMock Before Running Tests">
+Ensure your test program calls `testing::InitGoogleMock(&argc, argv);` before invoking `RUN_ALL_TESTS();`.
+</Step>
+<Step title="Add Valid Mock Expectations">
+Set up `EXPECT_CALL` or `ON_CALL` macros correctly for your mock objects with matchers that match the arguments used during the tests.
+</Step>
+<Step title="Run Tests with Verbose Output If Needed">
+Use `--gmock_verbose=info` or equivalent to diagnose unexpected or uninteresting calls. Read the detailed messages to adjust expectations.
+</Step>
+</Steps>
+
+---
+
+## Common Error Messages Explained
+
+<AccordionGroup title="Common Error Messages">
+<Accordion title="Uninteresting mock function call">
+This warning appears when a mock method is called but no `EXPECT_CALL` matches it. It is usually safe to ignore if you don't want to verify this call explicitly, but consider adding an `ON_CALL` or `EXPECT_CALL(...).Times(AnyNumber())` to suppress.
+</Accordion>
+<Accordion title="Unexpected mock function call">
+This failure indicates a method was called with arguments that do not match any `EXPECT_CALL`. Review your matchers and ensure expectations cover all valid call cases.
+</Accordion>
+<Accordion title="Mock function called more times than expected">
+GoogleMock detected a call count violation. Either increase `Times()` cardinality, or verify your code does not call more than expected.
+</Accordion>
+<Accordion title="Leaked mock object">
+You must properly destroy mock objects to verify expectations. Use `Mock::AllowLeak()` if you intend to leak mocks intentionally.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## Additional Resources
+
+- [Installation Platforms Guide](/getting-started/prerequisites-installation/installation-platforms)
+- [Configuration and Setup Guide](/getting-started/prerequisites-installation/configuration-setup)
+- [Writing & Running Your First Test](/getting-started/first-steps-usage/writing-running-first-test)
+- [gMock Cookbook](../gmock_cook_book.md) for advanced mocking tips
+- [Mocking Reference](../reference/mocking.md) for detailed mock API info
+
+---
+
+## Getting Help
+
+If you are stuck:
+
+- Check your build and link configuration
+- Increase verbosity using `--gmock_verbose=info`
+- Examine stack traces and failure messages carefully
+- Search and ask in community forums or issue trackers
+
+Stay confident: mastering setup issues will unlock powerful, reliable testing with GoogleTest and GoogleMock.
